<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Minions</string>
    <string name="action_settings">Settings</string>
    <string name="help">Help</string>
    <string name="menu">Main Menu</string>
    <string name="welcome">Minions</string>
    <string name="options">Options</string>
    <string name="game">Game</string>

    <string name="play">Play Game</string>

    //options screen
    <string name="boardSize">Board Size: </string>
    <string name="numOfMinions">No. of minions: </string>
    <string name="size1">3 * 4</string>
    <string name="size2">4 * 6</string>
    <string name="size3">8 * 12</string>
    <string name="num1">6</string>
    <string name="num2">10</string>
    <string name="num3">15</string>
    <string name="num4">20</string>
    <string name="erase">Erase times played</string>
    <string name="skip">Skip</string>
    <string name="gamesplayed">Games played: </string>
    <string name="minionsRemain">Minions Remaining </string>
    <string name="movesMade">Moves Made: </string>
    <string name="howto">How To: \nSelect board size and the amount of minions you want to face in
     the options menu. To play the game, you have to get away from the minions
     by touching cells adjacent to yourself(stickman). If minions go into the same cell
    then it will kill both of them. Continue evading minions until your the last man
    standing! Or get killed by a minion occupying the same cell as you.</string>
    <string name="website">http://www.cs.sfu.ca/~wsumner/teaching/276/15/</string>


    //welcome screen
    <string name="by">By: Noor and Nate</string>


</resources>
