<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout_menu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/txt_menu"
        android:textSize="42sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/btn_game"
        android:layout_centerVertical="true"
        android:enabled="true"
        android:layout_alignRight="@+id/txt_menu"
        android:layout_alignEnd="@+id/txt_menu"
        android:layout_alignLeft="@+id/txt_menu"
        android:layout_alignStart="@+id/txt_menu"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:id="@+id/button"
        android:enabled="true"
        android:layout_alignLeft="@+id/btn_game"
        android:layout_alignStart="@+id/btn_game"
        android:layout_alignRight="@+id/btn_game"
        android:layout_alignEnd="@+id/btn_game"
        android:layout_below="@+id/btn_game"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:id="@+id/button2"
        android:enabled="true"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_below="@+id/button"
        android:textSize="16sp" />

</RelativeLayout>
